# ragulate

./: .gitignore  Makefile  README.md  pyproject.toml
.github/actions/cleanup-python-uv/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  publish-to-pypi.yml
src/ragulate/: analysis.py  cli.py  dashboard.py  data.py  debug.py  utils.py
src/ragulate/cli_commands/: __init__.py  compare.py  dashboard.py  debug.py  download.py  ingest.py  query.py  run.py
src/ragulate/config/: config_schema_0_1.py  objects.py
src/ragulate/datasets/: __init__.py  base_dataset.py  crag_dataset.py  llama_dataset.py  test_dataset.py
src/ragulate/pages/: compare.py  home.py
src/ragulate/pipelines/: base_pipeline.py  ingest_pipeline.py  query_pipeline.py
src/ragulate/ui/: column.py  data.py  home.py  launcher.py  state.py  utils.py
src/ragulate/ui/pages/: chart.py  compare.py  filter.py
tests/integration_tests/: test_cli.py
tests/unit_tests/: test_config_validation.py  test_query_pipeline.py
